Test openapi schema of /articles/{article}/comments
